// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Advanced Settings: Voice Announcement should render announcement 1`] = `
<EuiScreenReaderOnly>
  <div
    aria-label="Advanced Settings results info"
    aria-live="polite"
    role="region"
  >
    <EuiDelayRender
      delay={500}
    >
      <FormattedMessage
        defaultMessage="You searched for {query}. There {optionLength, plural, one {is # option} other {are # options}} in {sectionLength, plural, one {# section} other {# sections}}"
        id="advancedSettings.voiceAnnouncement.searchResultScreenReaderMessage"
        values={
          Object {
            "optionLength": 1,
            "query": "dark theme",
            "sectionLength": 1,
          }
        }
      />
    </EuiDelayRender>
  </div>
</EuiScreenReaderOnly>
`;

exports[`Advanced Settings: Voice Announcement should render nothing 1`] = `
<EuiScreenReaderOnly>
  <div
    aria-label="Advanced Settings results info"
    aria-live="polite"
    role="region"
  >
    <EuiDelayRender
      delay={500}
    >
      <FormattedMessage
        defaultMessage="There {optionLength, plural, one {is # option} other {are # options}} in {sectionLength, plural, one {# section} other {# sections}}"
        id="advancedSettings.voiceAnnouncement.noSearchResultScreenReaderMessage"
        values={
          Object {
            "optionLength": 1,
            "sectionLength": 1,
          }
        }
      />
    </EuiDelayRender>
  </div>
</EuiScreenReaderOnly>
`;
